k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-service
spec:
  type: ClusterIP
  selector:
    app: php-app
  ports:
    - port: 80
      targetPort: 80
